Fix white space, add background color for all pages in body

--- a/app/javascript/packs/css/application.css
+++ b/app/javascript/packs/css/application.css
@@ -105,17 +105,7 @@
   background-color: #272c2F;
 }
 
-
-#show-page-container {
+body {
   background-color: #272c2F;
-  height:100%;
-  width: 100%;
-  min-height:100vh;
-}
 
-#broadcaster-page-container {
-  background-color: #272c2F;
-  height:100%;
-  width:100%;
-  min-height: 100vh;
 }
